Several fixes and additions. Units are now being shown depending on their visibility specified in the CSV.

--- a/lmsmanipulator/static/css/lmsmanipulator.css
+++ b/lmsmanipulator/static/css/lmsmanipulator.css
@@ -1,3 +1,8 @@
 .lmx_controls {
     text-align: center;
 }
+
+.lmx_error {
+    text-align: center;
+    color: red;
+}
